--- a/crudexample/employee/templates/edit.html
+++ b/crudexample/employee/templates/edit.html
@@ -35,10 +35,16 @@
         <input type="email" name="eemail" id="id_eemail" required maxlength="254" value="{{ employee.eemail }}" />  
     </div>  
   </div>  
+  <div class="form-group row">  
+  <label class="col-sm-2 col-form-label">Employee Address:</label>  
+  <div class="col-sm-4">  
+      <input type="text" name="eaddress" id="id_address" required maxlength="15" value="{{ employee.eaddress }}" />  
+  </div>  
+  </div>  
     <div class="form-group row">  
-    <label class="col-sm-2 col-form-label">Employee Contact:</label>  
+    <label class="col-sm-2 col-form-label">Employee Designation:</label>  
     <div class="col-sm-4">  
-        <input type="text" name="econtact" id="id_econtact" required maxlength="15" value="{{ employee.econtact }}" />  
+        <input type="text" name="edesignation" id="id_edesignation" required maxlength="15" value="{{ employee.edesignation}}" />  
     </div>  
   </div>  
     <div class="form-group row">  
