--- a/crudexample/employee/templates/index.html
+++ b/crudexample/employee/templates/index.html
@@ -35,10 +35,16 @@
       {{ form.eemail }}  
     </div>  
   </div>  
+  <div class="form-group row">  
+  <label class="col-sm-2 col-form-label">Employee Address:</label>  
+  <div class="col-sm-4">  
+    {{ form.eaddress }}  
+  </div>  
+  </div>  
     <div class="form-group row">  
-    <label class="col-sm-2 col-form-label">Employee Contact:</label>  
+    <label class="col-sm-2 col-form-label">Employee Designation:</label>  
     <div class="col-sm-4">  
-      {{ form.econtact }}  
+      {{ form.edesignation }}  
     </div>  
   </div>  
     <div class="form-group row">  
